# WaterRippleEffect

./: .gitignore  CMakeLists.txt  README.md
gui/qt/: CMakeLists.txt
gui/qt/include/: mainwindow.h  water_effect.h
gui/qt/src/: main.cpp  mainwindow.cpp  mainwindow.ui  water_effect.cpp
include/wre/: water_ripple.h  wave_map.hpp
src/: water_ripple.cpp
test/: CMakeLists.txt  wre_test.cpp
